Criação do Hero-Section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,32 @@
     <title>Mentorama Coffe</title>
 </head>
 <body>
-    <h1>This is a Tittle.</h1>
-    <p>And this is an paragraph.</p>
+    <header class="nav-container">
+        <nav class="header">
+            <a href="#">
+                <img src="./assets/Icons/Burger.svg">
+            </a>
+            <h1>Black<i>Coffe</i></h1>
+            <a href="#">
+                <img src="./assets/Icons/Bag.svg">
+            </a>
+        </nav>
+    </header>
+    <main class="hero">
+        <div class="hero-container">
+            <div class="paginator">
+                <div class="page-indicator active"></div>
+                <div class="page-indicator"></div>
+                <div class="page-indicator"></div>
+            </div>
+            <h1 class="headline-1">
+                Preparamos o melhor café fresco da torra cada dia
+            </h1>
+            <p class="subhead">
+                Entregamos em todo Brasil
+            </p>
+        </div>
+    </main>
+    <script src="./scripts.js"></script>
 </body>
 </html>
