--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <title>Mentorama Coffe</title>
 </head>
 <body>
-    <header class="nav-container">
+    <header id="navmenu" class="nav-container">
         <nav class="header">
             <a href="#">
                 <img src="./assets/Icons/Burger.svg">
             </a>
-            <h1>Black<i>Coffe</i></h1>
+            <a href="#">
+                <h1>Black<i>Coffe</i></h1>
+            </a>
             <a href="#">
                 <img src="./assets/Icons/Bag.svg">
             </a>
@@ -23,7 +25,7 @@
     <main class="hero">
         <div class="hero-container">
             <div class="paginator">
-                <div class="page-indicator active"></div>
+                <div class="page-indicator"></div>
                 <div class="page-indicator"></div>
                 <div class="page-indicator"></div>
             </div>
@@ -33,8 +35,139 @@
             <p class="subhead">
                 Entregamos em todo Brasil
             </p>
+            <div class="navigator">
+                <div class="navigator-button">
+                    <img src="./assets/Icons/Arrow-Left.svg">
+                </div>
+                <div class="navigator-button">
+                    <img src="./assets/Icons/Arrow-Right.svg">
+                </div>
+            </div>
         </div>
     </main>
+    <section class="section">
+        <div class="image-text-section">
+            <img src="./assets/Images/Section-01.jpg" alt="Café sendo servido de uma máquna">
+            <div class="section-text-content">
+                <h2>Café magico...</h2>
+                <p class="body-XL">Preparado com os melhores ingredientes e com os melhores acessórios, seguindo os métodos tradicionais e os mais modernos.</p>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="image-text-section reverse">
+            <img src="./assets/Images/Section-02.jpg" alt="Café na caneca visto de cima">
+            <div class="section-text-content">
+                <h2>...e muito mais</h2>
+                <p class="body-XL">Não esqueça de dar uma olhada em nossa seleção de sobremesas deliciosas!</p>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <h2 class="coffe-grid-title">Variedades de café</h2>
+        <div class="coffe-grid-section">
+            <div class="coffe-card">
+                <p class="coffe-card-title">RUANDA UMARAGE NAT</p>
+                <img src="./assets/Images/Product.png" alt="Pacote de Café">
+                <div class="coffe-price-container">
+                    <span class="coffe-promotional">40 R$</span>
+                    <span class="coffe-price">60 R$</span>
+                </div>
+                <button class="coffe-card-button">
+                    + adicionar ao carrinho
+                </button>
+            </div>
+            <div class="coffe-card">
+                <p class="coffe-card-title">RUANDA UMARAGE NAT</p>
+                <img src="./assets/Images/Product.png" alt="Pacote de Café">
+                <div class="coffe-price-container">
+                    <span class="coffe-promotional">40 R$</span>
+                    <span class="coffe-price">60 R$</span>
+                </div>
+                <button class="coffe-card-button">
+                    + adicionar ao carrinho
+                </button>
+            </div>
+            <div class="coffe-card">
+                <p class="coffe-card-title">RUANDA UMARAGE NAT</p>
+                <img src="./assets/Images/Product.png" alt="Pacote de Café">
+                <div class="coffe-price-container">
+                    <span class="coffe-promotional">40 R$</span>
+                    <span class="coffe-price">60 R$</span>
+                </div>
+                <button class="coffe-card-button">
+                    + adicionar ao carrinho
+                </button>
+            </div>
+            <div class="coffe-card">
+                <p class="coffe-card-title">RUANDA UMARAGE NAT</p>
+                <img src="./assets/Images/Product.png" alt="Pacote de Café">
+                <div class="coffe-price-container">
+                    <span class="coffe-promotional">40 R$</span>
+                    <span class="coffe-price">60 R$</span>
+                </div>
+                <button class="coffe-card-button">
+                    + adicionar ao carrinho
+                </button>
+            </div>
+            <div class="coffe-card">
+                <p class="coffe-card-title">RUANDA UMARAGE NAT</p>
+                <img src="./assets/Images/Product.png" alt="Pacote de Café">
+                <div class="coffe-price-container">
+                    <span class="coffe-promotional">40 R$</span>
+                    <span class="coffe-price">60 R$</span>
+                </div>
+                <button class="coffe-card-button">
+                    + adicionar ao carrinho
+                </button>
+            </div>
+            <div class="coffe-card">
+                <p class="coffe-card-title">RUANDA UMARAGE NAT</p>
+                <img src="./assets/Images/Product.png" alt="Pacote de Café">
+                <div class="coffe-price-container">
+                    <span class="coffe-promotional">40 R$</span>
+                    <span class="coffe-price">60 R$</span>
+                </div>
+                <button class="coffe-card-button">
+                    + adicionar ao carrinho
+                </button>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="advantages">
+            <div class="advantage">
+                <img src="./assets/Icons/Truck.svg">
+                <span>Entrega</br>gratuita</span>
+            </div>
+            <div class="advantage">
+                <img src="./assets/Icons/Coffe.svg">
+                <span>Pagamento</br>na entrega</span>
+            </div>
+            <div class="advantage">
+                <img src="./assets/Icons/Wallet.svg">
+                <span>Política</br>de reembolso</span>
+            </div>
+            <div class="advantage">
+                <img src="./assets/Icons/Discount.svg">
+                <span>Sistema de descontos acumuláveis</span>
+            </div>
+            <div class="advantage">
+                <img src="./assets/Icons/Gift.svg">
+                <span>Presente por cada</br>6 caixas de café</span>
+            </div>
+        </div>
+        <div class="banners">
+            <div href="#" class="banner banner1">
+                <h2>Catálogo de cafés</h2>
+                <p class="body-large">Mais de 50 tipos de café fresco da torra para qualquer método de preparo</p>
+            </div>
+            <div href="#" class="banner banner2">
+                <h2>Acessórios</h2>
+                <p class="body-large">Todo o que a gente precisa para preparar um café saboroso em casa<p>
+            </div>
+        </div>
+    </section>
     <script src="./scripts.js"></script>
 </body>
 </html>
