Reestruturação do CSS, hero-section-concluida

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Coffe</title>
   </head>
   <body>
-    <header>
+    <header id="navmenu">
       <nav>
         <i class="menu"></i>
         <h1>Black<em>Coffe</em></h1>
@@ -263,4 +263,5 @@
       </div>
     </footer>
   </body>
+  <script src="./scripts/scripts.js"></script>
 </html>
